:sparkles: Monsters added

--- a/templates/includes/sidebar.html.twig
+++ b/templates/includes/sidebar.html.twig
@@ -24,35 +24,15 @@
                 <span class="nav-item-text group-hover:block">Ventes</span>
             </a>
             <a href="{{ path("app_sale") }}" class="nav-item group/icon">
-                <i data-feather="book" class="nav-item-icon"></i>
-                <span class="nav-item-text group-hover:block">Documentation</span>
-            </a>
-            <a href="{{ path("app_sale") }}" class="nav-item group/icon">
-                <i data-feather="book" class="nav-item-icon"></i>
-                <span class="nav-item-text group-hover:block">Documentation</span>
-            </a>
-            <a href="{{ path("app_sale") }}" class="nav-item group/icon">
-                <i data-feather="book" class="nav-item-icon"></i>
-                <span class="nav-item-text group-hover:block">Documentation</span>
-            </a>
-            <a href="{{ path("app_sale") }}" class="nav-item group/icon">
-                <i data-feather="book" class="nav-item-icon"></i>
-                <span class="nav-item-text group-hover:block">Documentation</span>
-            </a>
-            <a href="{{ path("app_sale") }}" class="nav-item group/icon">
-                <i data-feather="book" class="nav-item-icon"></i>
-                <span class="nav-item-text group-hover:block">Documentation</span>
-            </a>
-            <a href="{{ path("app_sale") }}" class="nav-item group/icon">
-                <i data-feather="book" class="nav-item-icon"></i>
-                <span class="nav-item-text group-hover:block">Documentation</span>
+                <i data-feather="award" class="nav-item-icon"></i>
+                <span class="nav-item-text group-hover:block">Records</span>
             </a>
             <a href="{{ path("app_sale") }}" class="nav-item group/icon">
                 <i data-feather="book" class="nav-item-icon"></i>
                 <span class="nav-item-text group-hover:block">Documentation</span>
             </a>
 
-            <a href="{{ path("app_logout") }}" class="nav-item group/icon mt-16">
+            <a href="{{ path("app_record") }}" class="nav-item group/icon mt-16">
                 <i data-feather="log-out" class="nav-item-icon"></i>
                 <span class="nav-item-text group-hover:block">Déconnexion</span>
             </a>
