:sparkles: Add records and some fixs

--- a/templates/includes/sidebar.html.twig
+++ b/templates/includes/sidebar.html.twig
@@ -23,7 +23,7 @@
                 <i data-feather="shopping-cart" class="nav-item-icon"></i>
                 <span class="nav-item-text group-hover:block">Ventes</span>
             </a>
-            <a href="{{ path("app_sale") }}" class="nav-item group/icon">
+            <a href="{{ path("app_record") }}" class="nav-item group/icon">
                 <i data-feather="award" class="nav-item-icon"></i>
                 <span class="nav-item-text group-hover:block">Records</span>
             </a>
@@ -32,10 +32,18 @@
                 <span class="nav-item-text group-hover:block">Documentation</span>
             </a>
 
-            <a href="{{ path("app_record") }}" class="nav-item group/icon mt-16">
-                <i data-feather="log-out" class="nav-item-icon"></i>
-                <span class="nav-item-text group-hover:block">Déconnexion</span>
-            </a>
+            {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
+                <a href="{{ path("app_logout") }}" class="nav-item group/icon mt-16">
+                    <i data-feather="log-out" class="nav-item-icon"></i>
+                    <span class="nav-item-text group-hover:block">Déconnexion</span>
+                </a>
+            {% else %}
+                <a href="{{ path("app_login") }}" class="nav-item group/icon mt-16">
+                    <i data-feather="log-in" class="nav-item-icon"></i>
+                    <span class="nav-item-text group-hover:block">Connexion</span>
+                </a>
+            {% endif %}
+
         </div>
         {% endif %}
     </nav>
