--- a/templates/profil/index.html.twig
+++ b/templates/profil/index.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Profil | {{ parent() }}{% endblock %}
 
 {% block body %}
+    <h1 class="text-center">Profil</h1>
     <section class="h-64 rounded-lg w-full overflow-hidden relative">
         <img src="{{ asset('uploads/bglight.jpeg') }}" class="h-full w-full object-cover">
         <div class="wrapper wrapper-style absolute w-full h-full z-10 top-0 left-0 flex justify-center items-center font-bold text-2xl text-gray-700 dark:text-gray-300">
