--- a/templates/sale/new.html.twig
+++ b/templates/sale/new.html.twig
@@ -6,6 +6,6 @@
     <h1>Créer une vente</h1>
 
     <section class="wrapper wrapper-style">
-        {{ include('sale/_form.html.twig') }}
+        {{ include('sale/includes/_form.html.twig') }}
     </section>
 {% endblock %}
