--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -13,6 +13,10 @@ h1 {
   @apply text-4xl font-bold leading-tight tracking-tight text-gray-900 dark:text-primary-400;
 }
 
+h2 {
+  @apply text-2xl;
+}
+
 h1, h2, h3, h4, .family {
   font-family: 'Fraunces', serif;
 }
