--- a/templates/sale/index.html.twig
+++ b/templates/sale/index.html.twig
@@ -2,7 +2,7 @@
 
 {% extends 'base.html.twig' %}
 
-{% block title %}Liste des Ventes{% endblock %}
+{% block title %}Liste des Ventes | {{ parent() }}{% endblock %}
 
 {% block body %}
     <h1 class="text-center">Liste des Ventes</h1>
