:bug: Navbar fix + role

--- a/templates/includes/navbar.html.twig
+++ b/templates/includes/navbar.html.twig
@@ -2,7 +2,13 @@
     <div class="flex flex-wrap justify-between items-center w-full">
         <div>
             <p class="text-xs">Path / <span class="font-bold text-gray-700 dark:text-gray-200">Accueil</span></p>
-            <p class="font-extrabold text-lg text-gray-700 dark:text-gray-200">Bonjour {{ app.user.pseudonymeWebsite }}</p>
+            <p class="font-extrabold text-lg text-gray-700 dark:text-gray-200">
+                {% if variable is defined and variable is not null %}
+                    Bonjour, {{ app.user.pseudonymeWebsite }}
+                {% else %}
+                    Bonjour, Aventurier
+                {% endif %}
+            </p>
         </div>
         <button data-collapse-toggle="navbar-solid-bg" type="button" class="inline-flex justify-center items-center ml-3 text-gray-400 rounded-lg md:hidden hover:text-gray-900 focus:outline-none focus:ring-2 focus:ring-blue-300 dark:text-gray-400 dark:hover:text-white dark:focus:ring-gray-500" aria-controls="navbar-solid-bg" aria-expanded="false">
             <span class="sr-only">Ouvrir le menu</span>
