--- a/assets/styles/components/_form.scss
+++ b/assets/styles/components/_form.scss
@@ -42,3 +42,8 @@ input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+
+input[type="file"] {
+  @apply bg-none rounded-lg;
+  margin: 0;
+}
