:sparkles: Roles + fiex

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,12 +4,7 @@
     <meta charset="UTF-8">
     <title>{% block title %}Monifus, le moniteur Dofus{% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <link rel="icon" type="image/png" sizes="32x32"
-          href="{{ asset('uploads/favicon_package/favicon-32x32.png') }}">
-    <link rel="icon" type="image/png" sizes="16x16"
-          href="{{ asset('uploads/favicon_package/favicon-16x16.png') }}">
-    <link rel="manifest" href="{{ asset('uploads/favicon_package/site.webmanifest') }}">
-    <link rel="mask-icon" href="{{ asset('uploads/favicon_package/safari-pinned-tab.svg') }}" color="#5bbad5">
+    <link rel="icon" href="{{ asset('uploads/logo.ico') }}" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Borel&family=Fraunces:opsz@9..144&display=swap" rel="stylesheet">
