:memo: Add documentation

--- a/templates/includes/sidebar.html.twig
+++ b/templates/includes/sidebar.html.twig
@@ -26,7 +26,7 @@
                 <i data-feather="award" class="nav-item-icon"></i>
                 <span class="nav-item-text group-hover:block">Records</span>
             </a>
-            <a href="{{ path("app_sale") }}" class="nav-item group/icon">
+            <a href="{{ path("app_documentation") }}" class="nav-item group/icon">
                 <i data-feather="book" class="nav-item-icon"></i>
                 <span class="nav-item-text group-hover:block">Documentation</span>
             </a>
