--- a/templates/includes/navbar.html.twig
+++ b/templates/includes/navbar.html.twig
@@ -40,7 +40,7 @@
                     <i data-feather="award" class="nav-item-icon"></i>
                     <span class="ml-6 font-semibold text-sm">Records</span>
                 </a>
-                <a href="{{ path("app_sale") }}" class="nav-item">
+                <a href="{{ path("app_documentation") }}" class="nav-item">
                     <i data-feather="book" class="nav-item-icon"></i>
                     <span class="ml-6 font-semibold text-sm">Documentation</span>
                 </a>
