:memo: Add documentation on website for users

--- a/templates/profil/index.html.twig
+++ b/templates/profil/index.html.twig
@@ -38,11 +38,11 @@
                 {{ form_widget(editForm.pseudonymeDofus) }}
             </div>
             <div>
-                {{ form_label(editForm.profilePictureFile, 'Photo de couverture') }}
+                {{ form_label(editForm.profilePictureFile, 'Photo de profil') }}
                 {{ form_widget(editForm.profilePictureFile) }}
             </div>
             <div>
-                {{ form_label(editForm.coverPictureFile, 'Photo de profil') }}
+                {{ form_label(editForm.coverPictureFile, 'Photo de couverture') }}
                 {{ form_widget(editForm.coverPictureFile) }}
             </div>
 
