:bug: Somes bugs

--- a/templates/documentation/includes/_monitors.html.twig
+++ b/templates/documentation/includes/_monitors.html.twig
@@ -2,9 +2,9 @@
     <h2 class="text-primary-400 dark:text-primary-400 text-4xl font-semibold mb-3">Moniteurs</h2>
     <p>Principe du moniteur : Un moniteur permet simplement de renseigner le prix d'une ressource de votre choix. Vous pouvez donc renseigner le prix par lot de un, de dix, ou de cent.</p>
     <p>Sur la page principale, vous retrouvez toutes les ressources qui possèdent au moins un moniteur :</p>
-    <img class="rounded-lg" src="{{ asset('documentation/monitor_index.png') }}" alt="Image de la page d'accueil des moniteurs">
+    <img class="rounded-lg" src="{{ asset('documentation/monitor_index.webp') }}" alt="Image de la page d'accueil des moniteurs">
     <p>Le moniteur ne sert à rien d'autre qu'à historiser un prix sur une ressource à un instant T</p>
     <p>En cliquant sur une des ressources, vous obtenez tout les moniteurs associés. Vous pouvez éditez n'importe quelle valeur en cliquant dessus :</p>
-    <img class="rounded-lg" src="{{ asset('documentation/monitor_edit.png') }}" alt="Image de l'édition' des moniteurs">
+    <img class="rounded-lg" src="{{ asset('documentation/monitor_edit.webp') }}" alt="Image de l'édition' des moniteurs">
     <p>Les valeurs du moniteur , elles, sont calculéees dans les ressources. (voir section Ressources)</p>
 </div>
