:sparkles: Add validation + style + star for required on sales

--- a/assets/styles/components/_form.scss
+++ b/assets/styles/components/_form.scss
@@ -29,6 +29,11 @@
 
   &-label {
     @apply block font-medium mb-2 text-lg family;
+
+    &.required:after {
+      content: " *";
+      @apply text-red-500
+    }
   }
 
   &-checkbox {
