--- a/templates/sale/new.html.twig
+++ b/templates/sale/new.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Nouvelle vente | {{ parent() }}{% endblock %}
 
 {% block body %}
-    <h1>Créer une vente</h1>
+    <h1 class="text-center">Créer une vente</h1>
 
     <section class="wrapper wrapper-style">
         {{ include('sale/includes/_form.html.twig') }}
