:sparkles: Metadata on website

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,6 +9,25 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Borel&family=Fraunces:opsz@9..144&display=swap" rel="stylesheet">
 
+    <!-- Primary Meta Tags -->
+    <title>Monifus | Le Moniteur Dofus</title>
+    <meta name="title" content="Monifus | Le Moniteur Dofus" />
+    <meta name="description" content="Monifus est un fansite regroupant divers outils pour les joueurs de Dofus." />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://monifus.fr/" />
+    <meta property="og:title" content="Monifus | Le Moniteur Dofus" />
+    <meta property="og:description" content="Monifus est un fansite regroupant divers outils pour les joueurs de Dofus." />
+    <meta property="og:image" content="{{ asset('uploads/banner.png') }}" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://monifus.fr/" />
+    <meta property="twitter:title" content="Monifus | Le Moniteur Dofus" />
+    <meta property="twitter:description" content="Monifus est un fansite regroupant divers outils pour les joueurs de Dofus." />
+    <meta property="twitter:image" content="{{ asset('uploads/banner.png') }}" />
+
     {% block stylesheets %}
         {{ encore_entry_link_tags('app') }}
     {% endblock %}
